Fixed spacing
Removed "guides" and fixed footer space so that lines would show up appropriately on most phones.

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -93,8 +93,8 @@
 @include media-query($on-laptop) {
   .footer-col-1,
   .footer-col-2 {
-    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-    width:         calc(50% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
+    width:         calc(45% - (#{$spacing-unit} / 2));
   }
 
   .footer-col-3 {
